force-app/main/default/objects/TTS_Royalty_Term__c/TTS_Royalty_Term__c.object-meta.xml
<CustomObject>
    <description>[TTS] Structured royalty terms for agreement payment obligations, including royalty basis and rate details.</description>
    <label>Royalty Term</label>
    <nameField>
        <displayFormat>ROY{00000}</displayFormat>
        <label>Royalty Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>