force-app/main/default/objects/TTS_Royalty_Term__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>TTS_Agreement__c</referenceTo>
    <relationshipLabel>Royalty Terms</relationshipLabel>
    <relationshipName>Royalty_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>