force-app/main/default/objects/TTS_Royalty_Term__c/fields/Agreement_Party__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The agreement party responsible for or benefiting from this royalty term.</inlineHelpText>
    <label>Agreement Party</label>
    <referenceTo>TTS_Agreement_Party__c</referenceTo>
    <relationshipLabel>Royalty Terms</relationshipLabel>
    <relationshipName>Royalty_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>