force-app/main/default/objects/TTS_Royalty_Term__c/fields/Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount__c</fullName>
    <inlineHelpText>Fixed royalty amount, when the term is not calculated from a percentage rate.</inlineHelpText>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>