force-app/main/default/objects/TTS_Royalty_Term__c/fields/Royalty_Basis__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Basis__c</fullName>
    <inlineHelpText>The revenue or event basis used to calculate the royalty amount.</inlineHelpText>
    <label>Royalty Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net sales</fullName>
            </value>
            <value>
                <fullName>Gross revenue</fullName>
            </value>
            <value>
                <fullName>Sublicensing revenue</fullName>
            </value>
            <value>
                <fullName>Units sold</fullName>
            </value>
            <value>
                <fullName>Fixed fee</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>