force-app/main/default/objects/TTS_Royalty_Term__c/fields/Royalty_Obligation_Type__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Obligation_Type__c</fullName>
    <inlineHelpText>The business reason for the royalty obligation.</inlineHelpText>
    <label>Royalty Obligation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensee royalty</fullName>
            </value>
            <value>
                <fullName>Inventor revenue share</fullName>
            </value>
            <value>
                <fullName>Sub-licensor pass-through</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>