force-app/main/default/objects/TTS_Royalty_Term__c/fields/Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Rate__c</fullName>
    <inlineHelpText>The royalty percentage rate used to calculate the amount.</inlineHelpText>
    <label>Royalty Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>