force-app/main/default/objects/TTS_Royalty_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement__c</columns>
    <columns>Direction__c</columns>
    <columns>Royalty_Obligation_Type__c</columns>
    <columns>Royalty_Basis__c</columns>
    <columns>Royalty_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>